--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -24,25 +24,21 @@ jobs:
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest, windows-latest]
-        build_type: [Release]
-        c_compiler: [gcc, clang, cl]
+        preset: [ci-debug-unix, ci-debug-clang, ci-debug-win]
         include:
           - os: windows-latest
-            c_compiler: cl
-            cpp_compiler: cl
+            preset: ci-debug-win
           - os: ubuntu-latest
-            c_compiler: gcc
-            cpp_compiler: g++
+            preset: ci-debug-unix
           - os: ubuntu-latest
-            c_compiler: clang
-            cpp_compiler: clang++
+            preset: ci-debug-clang
         exclude:
           - os: windows-latest
-            c_compiler: gcc
+            preset: ci-debug-unix
           - os: windows-latest
-            c_compiler: clang
+            preset: ci-debug-clang
           - os: ubuntu-latest
-            c_compiler: cl
+            preset: ci-debug-win
 
     steps:
     - uses: actions/checkout@v3
@@ -52,24 +48,20 @@ jobs:
       id: strings
       shell: bash
       run: |
-        echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+        echo "build-output-dir=${{ github.workspace }}/build-ci" >> "$GITHUB_OUTPUT"
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
-        cmake -B ${{ steps.strings.outputs.build-output-dir }}
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -S ${{ github.workspace }}
+        cmake --preset ${{ matrix.preset }} -S ${{ github.workspace }}
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      run: cmake --build --preset ${{ matrix.preset }}
 
     - name: Test
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      working-directory: ${{ github.workspace }}
       # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest --build-config ${{ matrix.build_type }}
+      run: ctest --preset ${{ matrix.preset }}
