Removed stdexec test from build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 CPMAddPackage(
         GITHUB_REPOSITORY nvidia/stdexec
         GIT_TAG ${UVEXEC_STDEXEC_VERSION}
-        OPTIONS "STDEXEC_BUILD_EXAMPLES OFF" "STDEXEC_BUILD_TESTS OFF" "STDEXEC_ENABLE_IO_URING_TESTS OFF"
+        OPTIONS "STDEXEC_BUILD_EXAMPLES OFF" "STDEXEC_BUILD_TESTS OFF" "BUILD_TESTING OFF" "STDEXEC_ENABLE_IO_URING_TESTS OFF"
 )
 CPMAddPackage("gh:libuv/libuv@${UVEXEC_UV_VERSION}")
 
