--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,14 @@ on:
     branches: [ "main" ]
 
 jobs:
-  prebuild:
+  clang:
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        preset: [ ci-debug-clang, ci-asan, ci-tsan ]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,75 +30,80 @@ jobs:
         run: |
           echo "build-output-dir=${{ github.workspace }}/build-ci" >> "$GITHUB_OUTPUT"
 
+      - name: Install clang 15
+        run: bash -c "$(wget -O - https://apt.llvm.org/llvm.sh) 15 && apt install libc++-15-dev"
+
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
         run: >
-          cmake --preset ci-debug-clang -S ${{ github.workspace }}
+          cmake --preset ${{ matrix.preset }} -S ${{ github.workspace }}
 
       - name: Build
+        working-directory: ${{ github.workspace }}
         # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-        run: cmake --build --preset ci-debug-clang
+        run: cmake --build --preset ${{ matrix.preset }}
 
       - name: Test
         working-directory: ${{ github.workspace }}
         # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-        run: ctest --preset ci-debug-clang
+        run: ctest --preset ${{ matrix.preset }}
 
-  build:
-    needs: prebuild
-    runs-on: ${{ matrix.os }}
+  gcc:
+    needs: clang
+    runs-on: ubuntu-latest
 
     strategy:
-      # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
 
-      # Set up a matrix to run the following 3 configurations:
-      # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
-      # 2. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>
-      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
-      #
-      # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        preset: [ci-debug-unix, ci-debug-win, ci-asan, ci-tsan, ci-release-unix, ci-release-win]
-        exclude:
-          - os: windows-latest
-            preset: ci-debug-unix
-          - os: windows-latest
-            preset: ci-asan
-          - os: windows-latest
-            preset: ci-tsan
-          - os: windows-latest
-            preset: ci-release-unix
-          - os: ubuntu-latest
-            preset: ci-debug-win
-          - os: ubuntu-latest
-            preset: ci-release-win
+        preset: [ci-debug-unix, ci-release-unix]
 
     steps:
     - uses: actions/checkout@v3
 
     - name: Set reusable strings
-      # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
       shell: bash
-      run: |
-        echo "build-output-dir=${{ github.workspace }}/build-ci" >> "$GITHUB_OUTPUT"
+      run: echo "build-output-dir=${{ github.workspace }}/build-ci" >> "$GITHUB_OUTPUT"
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: >
-        cmake --preset ${{ matrix.preset }} -S ${{ github.workspace }}
+      run: cmake --preset ${{ matrix.preset }} -S ${{ github.workspace }}
 
     - name: Build
-      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
+      working-directory: ${{ github.workspace }}
       run: cmake --build --preset ${{ matrix.preset }}
 
     - name: Test
       working-directory: ${{ github.workspace }}
-      # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --preset ${{ matrix.preset }}
+
+  msvc:
+    needs: clang
+    runs-on: windows-latest
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        preset: [ ci-debug-win, ci-release-win ]
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set reusable strings
+        id: strings
+        shell: bash
+        run: echo "build-output-dir=${{ github.workspace }}/build-ci" >> "$GITHUB_OUTPUT"
+
+      - name: Configure CMake
+        run: cmake --preset ${{ matrix.preset }} -S ${{ github.workspace }}
+
+      - name: Build
+        working-directory: ${{ github.workspace }}
+        run: cmake --build --preset ${{ matrix.preset }}
+
+      - name: Test
+        working-directory: ${{ github.workspace }}
+        run: ctest --preset ${{ matrix.preset }}
