priveleges for clang installer

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           echo "build-output-dir=${{ github.workspace }}/build-ci" >> "$GITHUB_OUTPUT"
 
       - name: Install clang 15
-        run: bash -c "$(wget -O - https://apt.llvm.org/llvm.sh) 15 && apt install libc++-15-dev"
+        run: sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh) 15 && apt install libc++-15-dev"
 
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
